--- a/Splendid.POCO.UI/MainWindow.xaml
+++ b/Splendid.POCO.UI/MainWindow.xaml
@@ -1,46 +1,57 @@
-﻿<Window x:Class="Splendid.POCO.UI.MainWindow"
+﻿<Controls:MetroWindow x:Class="Splendid.POCO.UI.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
 		xmlns:controls="clr-namespace:Splendid.POCO.UI.Controls"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
 		xmlns:local="clr-namespace:Splendid.POCO.UI"
-		mc:Ignorable="d" ResizeMode="NoResize"
+		mc:Ignorable="d"
 		Title="Fluent Entity Generator" WindowState="Maximized">
 
     <Window.Resources>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="Margin" Value="0,0,10,0"></Setter>            
+        <Style TargetType="TextBox">
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Margin" Value="0,5"></Setter>
+            <Setter Property="FontSize" Value="16"></Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Margin" Value="0,5"></Setter>
+            <Setter Property="FontSize" Value="15"></Setter>
+            <Setter Property="FontWeight" Value="SemiBold"></Setter>
         </Style>
     </Window.Resources>
-    
-	<Grid Margin="10">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
 
-		<Grid>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition></ColumnDefinition>
-				<ColumnDefinition Width="Auto"></ColumnDefinition>
-			</Grid.ColumnDefinitions>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
 
-			<controls:CustomTextBox PlaceHolder="Connection String.."></controls:CustomTextBox>
-			<StackPanel Grid.Column="1" Orientation="Horizontal">
-                <Button Style="{StaticResource ButtonStyle}" >Connect</Button>
-                <Button Style="{StaticResource ButtonStyle}">Refresh</Button>
-			</StackPanel>
-		</Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
-		<Grid Grid.Row="1">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="200"></ColumnDefinition>
-				<ColumnDefinition></ColumnDefinition>
-			</Grid.ColumnDefinitions>
+            <TextBlock>Enter Connection String:</TextBlock>
+            <TextBox Grid.Column="1"></TextBox>
+            <StackPanel Grid.Column="2" Orientation="Horizontal">
+                <Button Margin="10,0" VerticalAlignment="Center">Connect</Button>
+                <Button VerticalAlignment="Center">Refresh</Button>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.4*"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
 
             <Grid>
                 <Grid.RowDefinitions>
@@ -49,49 +60,59 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <ComboBox></ComboBox>
-                
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="Schema: "></TextBlock>
+                    <ComboBox Grid.Column="1" VerticalAlignment="Center"></ComboBox>
+                </Grid>
                 <controls:CustomTextBox Grid.Row="1" PlaceHolder="Search Table"></controls:CustomTextBox>
-                
-                <DataGrid Grid.Row="2">
+
+                <DataGrid Grid.Row="2" BorderBrush="{StaticResource AccentColorBrush}" BorderThickness="1"
+                          CanUserDeleteRows="False"
+                          CanUserReorderColumns="False"
+                          CanUserAddRows="False">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Width="*" Header="Table Name"
-										CanUserReorder="False" 
-										IsReadOnly="True"></DataGridTextColumn>
+                        <DataGridCheckBoxColumn></DataGridCheckBoxColumn>
+                        <DataGridTextColumn Width="*" Header="Table Name" IsReadOnly="True"></DataGridTextColumn>
+                        <DataGridTextColumn Width="*" Header="Class Name"></DataGridTextColumn>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
-            
-			
 
-			<TabControl Grid.Column="1">
-				<TabItem Header="Entity">
-					<avalonEdit:TextEditor  FontFamily="Consolas"
+
+
+            <TabControl Grid.Column="1">
+                <TabItem Header="Entity">
+                    <avalonEdit:TextEditor  FontFamily="Consolas"
 						FontSize="10pt" IsReadOnly="True"
 						SyntaxHighlighting="C#" x:Name="entityCodeEditor">
-					</avalonEdit:TextEditor>
+                    </avalonEdit:TextEditor>
 
-				</TabItem>
-				<TabItem Header="Configuration">
-					<avalonEdit:TextEditor  FontFamily="Consolas"
+                </TabItem>
+                <TabItem Header="Configuration">
+                    <avalonEdit:TextEditor  FontFamily="Consolas"
 						FontSize="10pt" IsReadOnly="True"
 						SyntaxHighlighting="C#" x:Name="entityMapEditor">
-					</avalonEdit:TextEditor>
-				</TabItem>
-			</TabControl>
+                    </avalonEdit:TextEditor>
+                </TabItem>
+            </TabControl>
 
-		</Grid>
+        </Grid>
 
-		<Grid Grid.Row="2">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition></ColumnDefinition>
-				<ColumnDefinition></ColumnDefinition>
-			</Grid.ColumnDefinitions>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            
+
             <GroupBox Header="Entity">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -133,11 +154,11 @@
             </GroupBox>
 
             <Grid Grid.Row="1">
-                <StackPanel Orientation="Horizontal">
-                    <Button Width="200" Style="{StaticResource ButtonStyle}">Generate Selected</Button>
-                    <Button Width="200" Style="{StaticResource ButtonStyle}">Generate All</Button>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <Button Width="200" Margin="0,0,20,0">Generate Selected</Button>
+                    <Button Width="200">Generate All</Button>
                 </StackPanel>
             </Grid>
-		</Grid>
-	</Grid>
-</Window>
+        </Grid>
+    </Grid>
+</Controls:MetroWindow>
